compile_tests/expected/extern_mod.stderr
error: only "wgsl" ABI is supported
 --> compile_tests/src/extern_mod.rs:7:12
  |
7 |     extern "C" {}
  |            ^^^

error: unsupported item
  --> compile_tests/src/extern_mod.rs:10:9
   |
10 |         static STATIC: U32;
   |         ^^^^^^

error: function must have a return type
  --> compile_tests/src/extern_mod.rs:12:12
   |
12 |         fn no_return_type();
   |            ^^^^^^^^^^^^^^